--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+$blue1: #00a6fb;
+$blue2: #0582ca;
+$blue3: #006494;
+$blue4: #003554;
+$blue5: #051923;
+$white1: #e4e4e4;
+$black1: #353535;
 
 * {
     font-family: Tahoma, sans-serif;
     font-size: 16px;
     font-weight: normal;
+    color: $black1;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body { 
+    height: 100%; 
+}
+
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
