--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,7 @@
+@import "../styles.scss";
+
 * {
-    background-color: rgb(88, 88, 88);
+    background-color: $blue5;
     height: 100%;
 }
 
@@ -7,13 +9,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: aquamarine;
+    background-color: $blue1;
     width: 100%;
     height: 50px;
     padding-top: 20px;
+    color: $white1;
 
     h1 {
-        background-color: aquamarine;
+        background-color: $blue1;
     }
 }
 
