refactoring and added event emitter for bar chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="toolContainer">
-        <app-comparison-form></app-comparison-form>
+        <app-comparison-form (emitter)="barChartComponent.calculateChartBars()"></app-comparison-form>
         <app-bar-chart></app-bar-chart>
     </div>
     
