--- a/src/app/comparison-form/comparison-form.component.html
+++ b/src/app/comparison-form/comparison-form.component.html
@@ -5,7 +5,7 @@
             <div class="userInputFields">
                 <mat-form-field [hideRequiredMarker]="true">
                     <mat-label>Buy Price</mat-label>
-                    <input matInput type="number" formControlName="buyPrice" placeholder="250000" (focus)="showPrefix=true">
+                    <input matInput type="number" formControlName="buyPrice" placeholder="250000">
                     <mat-error>Required</mat-error>
                 </mat-form-field>
 
@@ -21,7 +21,7 @@
                     <mat-error>Required</mat-error>
                 </mat-form-field>
 
-                <mat-form-field>
+                <mat-form-field [hideRequiredMarker]="true">
                     <mat-label>Loan Term</mat-label>
                     <mat-select formControlName="loanTerm">
                         <mat-option *ngFor="let term of loanTerms" [value]="term">{{term}}</mat-option>
@@ -37,12 +37,12 @@
 
                 <mat-form-field>
                     <mat-label>Property Tax</mat-label>
-                    <input matInput type="number" formControlName="propertyTaxValue">
+                    <input matInput type="number" formControlName="propertyTax">
                 </mat-form-field>
 
                 <mat-form-field>
                     <mat-label>Maintenance Cost</mat-label>
-                    <input matInput type="number" formControlName="maintenanceCostValue">
+                    <input matInput type="number" formControlName="maintenanceCost">
                 </mat-form-field>
 
                 <mat-form-field>
@@ -52,7 +52,7 @@
 
                 <mat-form-field>
                     <mat-label>Total Monthly Cost</mat-label>
-                    <input matInput type="number" formControlName="totalCostValue">
+                    <input matInput type="number" formControlName="totalMonthlyCost">
                 </mat-form-field>
             </div>
         </div>
@@ -69,7 +69,7 @@
     </form>
 
     <div class="buttonContainer">
-        <button mat-flat-button class="compareButton" (click)="comparePricing()" >Compare</button>
+        <button mat-flat-button class="compareButton" (click)="comparePricing()">Compare</button>
     </div>
     
 </div>
