--- a/src/app/bar-chart/bar-chart.component.scss
+++ b/src/app/bar-chart/bar-chart.component.scss
@@ -1,4 +1,5 @@
 @import "../../styles.scss";
+@import "~@fortawesome/fontawesome-free/css/all.css";
 
 .bar-chart-container {
     border-width: 1px;
