--- a/src/app/comparison-form/comparison-form.component.scss
+++ b/src/app/comparison-form/comparison-form.component.scss
@@ -1,4 +1,5 @@
 @import "../../styles.scss";
+@import "~@fortawesome/fontawesome-free/css/all.css";
 
 .comparison-form-container {
     background-color: $white1;
@@ -79,4 +80,8 @@ mat-error {
 
 .calculatedFields {
     padding-top: 20px;
+}
+
+.pointer-events {
+    pointer-events: auto;
 }
