--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@ $blue3: #006494;
 $blue4: #003554;
 $blue5: #051923;
 $white1: #e4e4e4;
+$white2: rgba(245, 245, 245, 0.9);
 $black1: #353535;
 
 * {
