bulk commit, dropdown needs fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ $blue5: #051923;
 $white1: #e4e4e4;
 $white2: rgba(245, 245, 245, 0.9);
 $black1: #353535;
+$black2: rgb(20, 20, 20);
 
 * {
     font-family: Tahoma, sans-serif;
