--- a/src/app/comparison-form/comparison-form.component.html
+++ b/src/app/comparison-form/comparison-form.component.html
@@ -4,7 +4,7 @@
         <div class="buying-prices">
             <div class="userInputFields">
                 <mat-form-field [hideRequiredMarker]="true">
-                    <mat-label>Buy Price</mat-label>
+                    <mat-label>Home Price</mat-label>
                     <input matInput type="number" formControlName="buyPrice" placeholder="250000" matTooltip="Info about the action">
                     <mat-error>Required</mat-error>
                 </mat-form-field>
